--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .banner{
     width: 100%;
     height: 100vh;
-    background: linear-gradient(rgba(0, 0, 0, 0.048),rgba(0, 0, 0, 0.11)), url(Images/bannerr.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.048),rgba(0, 0, 0, 0.11)), url(bannerr.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
